# odgs-flint-bridge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  sample_flint.json
examples/: act_dora_access_control.json  duty_ai_act_transparency.json  fact_zorgtoeslag.json  reference_dora_to_nis2.json  run_all.py  source_awb_art5.json  violation_ai_act_transparency.json
odgs_flint_bridge/: cli.py  compiler.py  main.py  parser.py
tests/: test_bridge.py
