[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odgs-flint-bridge"
version = "0.3.0"
description = "Institutional Bridge: Compiling TNO FLINT (Regels als Code) into ODGS Executable Rules."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "ODGS Protocol", email = "hello@metricprovenance.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.5.0",
    "odgs>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["odgs_flint_bridge"]

[project.scripts]
odgs-flint = "odgs_flint_bridge.cli:main"
