[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odgs-flint-bridge"
version = "0.4.0"
description = "Institutional Bridge: Compiling TNO FLINT (Regels als Code) into ODGS Executable Rules."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "ODGS Protocol", email = "hello@metricprovenance.com" }
]
keywords = ["odgs", "flint", "tno", "regels-als-code", "legal-ontology", "data-governance", "regulatory", "compliance", "dutch-law", "eu-ai-act"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.5.0",
    "odgs>=5.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://metricprovenance.com"
Repository = "https://github.com/MetricProvenance/odgs-flint-bridge"
Documentation = "https://github.com/MetricProvenance/odgs-flint-bridge#readme"
Changelog = "https://github.com/MetricProvenance/odgs-flint-bridge/blob/main/CHANGELOG.md"
Issues = "https://github.com/MetricProvenance/odgs-flint-bridge/issues"
"Partner Demo" = "https://platform.metricprovenance.com"
"ODGS Core" = "https://pypi.org/project/odgs/"

[tool.hatch.build.targets.wheel]
packages = ["odgs_flint_bridge"]

[project.scripts]
odgs-flint = "odgs_flint_bridge.cli:main"
